# XMEngine4

./: CMakeLists.txt  README.md  main.cpp  main.h
gamecore/bullets/: bullet.cpp  bullet.h
gamecore/camera/: camera.cpp  camera.h
gamecore/cartridges/: cartridges.cpp  cartridges.h
gamecore/characters/: characters.cpp  characters.h
gamecore/collisions/: collision.cpp  collision.h
gamecore/frustum/: frustum.cpp  frustum.h
gamecore/hud/: hud.cpp  hud.h
gamecore/skybox/: skybox.cpp
gamecore/weapons/: weapons.cpp  weapons.h
gamecore/xmanimation/: xmanimation.cpp  xmanimation.h  xmvertexanimation.cpp  xmvertexanimation.h
gamecore/xmdmodel/: xmdmodel.cpp  xmdmodel.h
gamecore/xmlevel/: postprocess.cpp  postprocess.h  shaders.cpp  shaders.h  xmlevel.cpp  xmlevel.h
gui/: cryptfuncs.h  gui.cpp  gui.h  networking.cpp  networking.h  servers.cfg
gui/xmmenu/: xmmenu.cpp  xmmenu.h
math/: mat3.h  mat4.cpp  mat4.h  quat.h  vector.cpp  vector.h
network/: client.cpp  client.h  fileUpdater.cpp  fileUpdater.h
window/: ProgressBar.rc  font.cpp  font.h  progress.manifest  resource.h  shaders.cpp  shaders.h  tex3D.cpp  tex3D.h  textures.cpp  textures.h  timer.cpp  timer.h  updatergui.h  window.cpp  window.h
